einstellung_derive/src/trybuild_tests/custom_merge_wrong_signature.stderr
error: Unknown value: `function(merge_hosts)`. Did you mean `function`?
 --> src/trybuild_tests/custom_merge_wrong_signature.rs
  |
  |     #[config(merge = "function(merge_hosts)")]
  |                      ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `a`
 --> src/trybuild_tests/custom_merge_wrong_signature.rs
  |
  | pub fn merge_hosts(a: String, b: String) -> String {
  |                    ^ help: if this is intentional, prefix it with an underscore: `_a`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
